--- a/index.html
+++ b/index.html
@@ -29,38 +29,41 @@
     </head>
 
     <body>
-
-        <!-- Navbar & Hero Start -->
+        <!-- Navbar Start -->
         <div class="container-fluid nav-bar sticky-top p-0">
-            <div class="container-fluid d-block w-100 bg-primary">
-                <div class="container">
-                    <div class="row gx-0 align-items-center">
-                        <div class="col-10 text-center text-lg-start mb-lg-0">
-                            <div class="d-flex flex-column flex-md-row align-items-start ">
-                                <a href="#" class="text-light me-4"><i class="fas fa-map-marker-alt text-primary me-2"></i>Zielona Góra, Lubuskie</a>
-                                <a href="tel:+48790466322" class="text-light me-4"><i class="fas fa-phone-alt text-primary me-2"></i>+48 790 466 322</a>
-                                <a href="mailto:tadeusz@tedicars.pl" class="text-light me-0"><i class="fas fa-envelope text-primary me-2"></i>tadeusz@tedicars.pl</a>
-                            </div>
-                        </div>
-                        <div class="col-2 text-center text-lg-end">
-                            <div class="d-flex justify-content-end align-items-center">
-                                <a href="https://www.facebook.com/tedicars/" target="_blank" class="btn text-primary btn-sm-square rounded-circle me-3"><i class="fab fa-facebook-f"></i></a>
-                                <a href="https://www.instagram.com/tedicars.pl/" target="_blank" class="btn text-primary btn-sm-square rounded-circle me-3"><i class="fab fa-instagram"></i></a>
-                                <a href="#" target="_blank" class="btn text-primary btn-sm-square rounded-circle me-0"><i class="fab fa-tiktok"></i></a>
-                            </div>
-                        </div>
-                    </div>
+            <!-- Contact and social media links -->
+            <div class="d-flex justify-content-between align-items-center px-3 w-100 bg-primary">
+                <div class="d-flex flex-column flex-md-row">
+                    <a href="#" class="text-light me-1 me-md-4">
+                        <i class="fas fa-map-marker-alt text-primary me-2"></i>
+                        Zielona Góra, Lubuskie
+                    </a>
+                    <a href="tel:+48790466322" class="text-light me-1 me-md-4">
+                        <i class="fas fa-phone-alt text-primary me-2"></i>
+                        +48 790 466 322
+                    </a>
+                    <a href="mailto:tadeusz@tedicars.pl" class="text-light me-0">
+                        <i class="fas fa-envelope text-primary me-2"></i>
+                        tadeusz@tedicars.pl
+                    </a>
+                </div>
+                <div class="d-flex">
+                    <a href="https://www.facebook.com/tedicars/" target="_blank" class="btn text-primary btn-sm-square rounded-circle me-0">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a href="https://www.instagram.com/tedicars.pl/" target="_blank" class="btn text-primary btn-sm-square rounded-circle me-0">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="#" target="_blank" class="btn text-primary btn-sm-square rounded-circle me-0">
+                        <i class="fab fa-tiktok"></i>
+                    </a>
                 </div>
             </div>
-            <nav class="
-            navbar navbar-expand-lg navbar-light
-            flex-column flex-lg-row
-            justify-content-lg-around align-items-lg-center align-items-stretch
-            p-2 px-lg-4 py-lg-0"
-            >
+            <!-- Navigation -->
+            <nav class="navbar navbar-expand-lg navbar-light flex-column flex-lg-row justify-content-between align-items-stretch align-items-lg-center px-3 py-2">
                 <div class="d-flex justify-content-between justify-content-lg-around">
-                    <a href="" class="navbar-brand p-0">
-                        <img src="img/napis.png" class="img-fluid me-3" alt="Tedicars logo">
+                    <a href="" class="navbar-brand">
+                        <img src="img/napis.png" class="img-fluid" alt="Tedicars logo">
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                         <span class="fa fa-bars"></span>
@@ -68,7 +71,7 @@
                 </div>
                 <div class="d-flex ps-3 ps-lg-0">
                     <div class="collapse navbar-collapse" id="navbarCollapse">
-                        <div class="navbar-nav mx-auto mt-2 py-0">
+                        <div class="navbar-nav">
                             <a href="index.html" class="nav-item nav-link active">Start</a>
                             <a href="flota.html" class="nav-item nav-link">Flota</a>
                             <a class="nav-item nav-link"><s>Usługi</s></a>
@@ -80,7 +83,7 @@
                 </div>
             </nav>
         </div>
-        <!-- Navbar & Hero End -->
+        <!-- Navbar End -->
 
         <!-- Carousel Start -->
         <div id="carouselExampleSlidesOnly" class="carousel slide py-5" data-bs-ride="carousel">
@@ -263,7 +266,9 @@
         <!-- Copyright End -->
 
         <!-- Back to Top -->
-        <a href="#" class="btn btn-secondary bg-primary btn-lg-square rounded-circle back-to-top" style="border-color: #ac9f6f"><i class="fa fa-arrow-up text-primary"></i></a>
+        <a href="#" class="btn btn-secondary bg-primary btn-lg-square rounded-circle back-to-top" style="border-color: #ac9f6f">
+            <i class="fa fa-arrow-up text-primary"></i>
+        </a>
         
         <!-- JavaScript Libraries -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
