--- a/flota.html
+++ b/flota.html
@@ -32,35 +32,35 @@
         <!-- Navbar -->
         <div class="container-fluid nav-bar sticky-top p-0">
             <!-- Contact and social media links -->
-            <div class="d-flex justify-content-between align-items-center px-3 w-100 bg-primary">
-            <div class="d-flex flex-column flex-md-row">
-                <a href="#" class="text-light me-1 me-md-4">
-                    <i class="fas fa-map-marker-alt text-primary me-2"></i>
-                    Zielona Góra, Lubuskie
-                </a>
-                <a href="tel:+48790466322" class="text-light me-1 me-md-4">
-                    <i class="fas fa-phone-alt text-primary me-2"></i>
-                    +48 790 466 322
-                </a>
-                <a href="mailto:tadeusz@tedicars.pl" class="text-light me-0">
-                    <i class="fas fa-envelope text-primary me-2"></i>
-                    tadeusz@tedicars.pl
-                </a>
+            <div class="d-flex justify-content-between align-items-center px-3 px-xl-5 w-100 bg-primary">
+                <div class="d-flex flex-column flex-md-row">
+                    <a href="#" class="text-light me-1 me-md-4">
+                        <i class="fas fa-map-marker-alt text-primary me-2"></i>
+                        Zielona Góra, Lubuskie
+                    </a>
+                    <a href="tel:+48790466322" class="text-light me-1 me-md-4">
+                        <i class="fas fa-phone-alt text-primary me-2"></i>
+                        +48 790 466 322
+                    </a>
+                    <a href="mailto:tadeusz@tedicars.pl" class="text-light me-0">
+                        <i class="fas fa-envelope text-primary me-2"></i>
+                        tadeusz@tedicars.pl
+                    </a>
+                </div>
+                <div class="d-flex">
+                    <a href="https://www.facebook.com/tedicars/" target="_blank" class="btn text-primary btn-sm-square rounded-circle me-0">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a href="https://www.instagram.com/tedicars.pl/" target="_blank" class="btn text-primary btn-sm-square rounded-circle me-0">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="#" target="_blank" class="btn text-primary btn-sm-square rounded-circle me-0">
+                        <i class="fab fa-tiktok"></i>
+                    </a>
+                </div>
             </div>
-            <div class="d-flex">
-                <a href="https://www.facebook.com/tedicars/" target="_blank" class="btn text-primary btn-sm-square rounded-circle me-0">
-                    <i class="fab fa-facebook-f"></i>
-                </a>
-                <a href="https://www.instagram.com/tedicars.pl/" target="_blank" class="btn text-primary btn-sm-square rounded-circle me-0">
-                    <i class="fab fa-instagram"></i>
-                </a>
-                <a href="#" target="_blank" class="btn text-primary btn-sm-square rounded-circle me-0">
-                    <i class="fab fa-tiktok"></i>
-                </a>
-            </div>
-        </div>
             <!-- Navigation -->
-            <nav class="navbar navbar-expand-lg navbar-light flex-column flex-lg-row justify-content-between align-items-stretch align-items-lg-center px-3 py-2">
+            <nav class="navbar navbar-expand-lg navbar-light flex-column flex-lg-row justify-content-between align-items-stretch align-items-lg-center px-3 py-2 px-xl-5">
                 <div class="d-flex justify-content-between justify-content-lg-around">
                     <a href="" class="navbar-brand">
                         <img src="img/napis.png" class="img-fluid" alt="Tedicars logo">
