--- a/mercedes-s-w222.html
+++ b/mercedes-s-w222.html
@@ -32,7 +32,7 @@
         <!-- Navbar -->
         <div class="container-fluid nav-bar sticky-top p-0">
             <!-- Contact and social media links -->
-            <div class="d-flex justify-content-between align-items-center px-3 w-100 bg-primary">
+            <div class="d-flex justify-content-between align-items-center px-3 px-xl-5 w-100 bg-primary">
                 <div class="d-flex flex-column flex-md-row">
                     <a href="#" class="text-light me-1 me-md-4">
                         <i class="fas fa-map-marker-alt text-primary me-2"></i>
@@ -60,7 +60,7 @@
                 </div>
             </div>
             <!-- Navigation -->
-            <nav class="navbar navbar-expand-lg navbar-light flex-column flex-lg-row justify-content-between align-items-stretch align-items-lg-center px-3 py-2">
+            <nav class="navbar navbar-expand-lg navbar-light flex-column flex-lg-row justify-content-between align-items-stretch align-items-lg-center px-3 py-2 px-xl-5">
                 <div class="d-flex justify-content-between justify-content-lg-around">
                     <a href="" class="navbar-brand">
                         <img src="img/napis.png" class="img-fluid" alt="Tedicars logo">
